refactor: added a postgresql database, updated requests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,10 @@ project(leetcode_tui)
 
 set(CMAKE_CXX_STANDARD 20)
 
+find_package(cpr REQUIRED)
 find_package(Curses REQUIRED)
 find_package(CURL REQUIRED)
+find_package(PostgreSQL REQUIRED)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address,undefined,leak")
 
@@ -16,7 +18,6 @@ add_executable(leetcode_tui src/main.cpp
         src/helpers/requests/dailyTaskRequest.hpp
         src/textWindow.cpp
         src/textWindow.hpp
-        src/helpers/requests/dailyTaskRequest.cpp
         src/app.cpp
         src/app.hpp
         src/mainMenuWindow.cpp
@@ -26,5 +27,7 @@ add_executable(leetcode_tui src/main.cpp
         src/helpers/task.hpp
         src/helpers/task.cpp
         src/helpers/requests/codeSnippetRequest.hpp
+        src/helpers/requests/dailyTaskRequest.cpp
 )
-target_link_libraries(leetcode_tui ncurses curl)
+
+target_link_libraries(leetcode_tui PRIVATE cpr::cpr ncurses curl pqxx pq gumbo)
