feat: added the ability to open the task text from the search

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,8 @@ add_executable(leetcode_tui src/main.cpp
         src/windows/menus/searchResultsMenuWindow.hpp
         src/helpers/requests/questionListRequest.cpp
         src/helpers/requests/questionListRequest.hpp
+        src/helpers/requests/singleTaskRequest.cpp
+        src/helpers/requests/singleTaskRequest.hpp
 )
 
 target_link_libraries(leetcode_tui PRIVATE cpr::cpr ncurses curl pqxx pq gumbo)
