refactor: changed config file and the function for getting parameters

--- a/config.conf
+++ b/config.conf
@@ -1,5 +1,10 @@
+[database]
 dbname=your_dbname
 user=your_username
 password=your_password
 hostaddr=your_hostaddr
 port=your_port
+
+[leetcode]
+csrftoken=your_csrftoken
+LEETCODE_SESSION=your_session
